# shruti

./: .dockerignore  .gitignore  README.md  dockerfile  pyproject.toml
app/: main.py
app/api/: routes.py
app/schemas/: transcription.py
app/services/: ml_model.py
frontend/: ui.py
scripts/: quantize.py
