[project]
name = "shruti"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "librosa>=0.11.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "soundfile>=0.13.1",
    "streamlit>=1.53.0",
    "torch>=2.9.1",
    "transformers>=4.57.6",
]
